Not (too?) important: fix crash in tests?
Some very bad code breaks on my machine, unsurprinsingly. It breaks
because of various dubious casts from pointer to int and vice-versa,
and sizeof(int) != sizeof(intptr_t) on x86-64, so boom.

--- a/test/ref/Makefile
+++ b/test/ref/Makefile
@@ -38,7 +38,7 @@ OPTIONS = g O Os Osi Osir Osr Oi Oir Or
 DIFF = $(WORKDIR)$Sbdiff$(EXE)
 
 CC = gcc
-CFLAGS = -O2 -Wall -W -Wextra -funsigned-char -fwrapv -fno-strict-overflow
+CFLAGS = -O2 -Wall -W -Wextra -funsigned-char -fwrapv -fno-strict-overflow -g3
 
 .PHONY: all clean
 
